# google-demo-helper-modules

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .release-please-manifest.json  .talismanrc  .yamllint.yml  CONTRIBUTING.md  Gemfile  README.md  pyproject.toml  release-please-config.json  requirements-dev.txt
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  release-please.yml
applications/arcadia-crypto/: Kptfile  README.md  arcadia-ai-rag.yaml  arcadia-ai.yaml  arcadia-db.yaml  arcadia-ingress.yaml  arcadia-llm.yaml  arcadia-ns.yaml  arcadia-stock_transaction.yaml  arcadia-stocks.yaml  arcadia-users.yaml
applications/gcp-otlp-k8s-ingest/: Kptfile  README.md  package-context.yaml
applications/gcp-otlp-k8s-ingest/upstream/: 0_namespace.yaml  2_rbac.yaml  3_service.yaml  4_deployment.yaml  5_hpa.yaml  Kptfile  kustomization.yml
applications/nic-crds/: Kptfile  README.md
applications/nic-crds-nap/: Kptfile  package-context.yaml
applications/nic-crds-nap/upstream/: Kptfile
applications/nic-crds-nap/upstream/app-protect-dos/: kustomization.yaml
applications/nic-crds/upstream/: Kptfile
applications/nic-oss/: Kptfile  README.md
applications/nic-oss/deployments/: Kptfile
applications/nic-oss/upstream/: Kptfile
applications/nic-plus/: Kptfile  README.md  kustomization.yaml
applications/nic-plus/config/: Kptfile
applications/nic-plus/deployments/: Kptfile
applications/ollama/: Kptfile  kustomization.yaml  ollama.yaml  package-context.yaml
(+25 files in other folders)
