[project]
name = "google-demo-helper-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# spell-checker: disable
dependencies = [
    "kubernetes>=35.0.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "pytest-testinfra[paramiko]>=10.2.2",
    "pytest-xdist>=3.8.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.10",
    "ty>=0.0.32",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
ignore = []
select = ["ALL"]
extend-select = ["I"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Allow assert and don't complain about implicit namespaces for tests.
"**/tests/**/*" = ["S", "INP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.coverage.paths]
source = ["tests"]

[tool.coverage.report]
show_missing = true

[tool.pytest]
addopts = [
    "--import-mode=importlib",
    "--cov=tests",
    "--cov-report=term-missing",
]
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s - %(levelname)s:%(name)s:%s(message)"
log_cli_date_format = "%Y-%m-%dT%H:%M:%S%z"
testpaths = ["tests"]
filterwarnings = [
    # spell-checker: disable
    "ignore:HTTPResponse.getheaders:DeprecationWarning"
    # spell-checker: enable
]
